<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fafafa"
            android:padding="14dp">
        <TextView
                android:id="@+id/emoji_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_layout_emoji"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="#616161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/title_view"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/error_layout_title"
                android:textColor="#616161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/desc_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#8d8d8d"
                android:text="@string/error_layout_secondary_text"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/desc_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:text="@string/retry_btn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>