<?xml version="1.0" encoding="utf-8"?>
<layout>
        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/message_info_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D0E9FF"
                android:padding="12dp">

                <ImageView
                        android:id="@+id/message_info_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_info"
                        android:contentDescription="@string/system_message_info_icon"/>

                <TextView
                        android:id="@+id/message_info_button"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="#204781"
                        android:text="OK"/>

                <TextView
                        android:id="@+id/message_info_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/message_info_view"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="8dp"
                        android:textColor="#204781"
                        android:textStyle="bold"
                        android:text="@string/system_message_info_title"/>
                <TextView
                        android:id="@+id/message_info_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/message_info_view"
                        app:layout_constraintTop_toBottomOf="@id/message_info_title"
                        android:layout_marginStart="8dp"
                        android:textColor="#204781"
                        android:text="@string/system_message_info_body"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>