<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="global" type="com.bilingoal.covirus.dto.Global"/>
    </data>
<com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="#E0E0E0"
        app:strokeWidth="1dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/confirmed"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
            <TextView
                    android:id="@+id/total_confirmed_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    tools:text="777553"
                    android:textAllCaps="true"
                    android:text="@{``+ global.totalConfirmed}"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textAllCaps="true"
                    android:layout_toEndOf="@id/total_confirmed_cases"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    android:textColor="#595959"
                    tools:text="+777"
                    android:text="@{`+`+ global.newConfirmed}"/>
        </RelativeLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/recovered"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
            <TextView
                    android:id="@+id/total_recovered_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textAllCaps="true"
                    tools:text="777553"
                    android:text="@{``+ global.totalRecovered}"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textAllCaps="true"
                    android:layout_toEndOf="@id/total_recovered_cases"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    android:textColor="#595959"
                    tools:text="+12"
                    android:text="@{`+`+ global.newRecovered}"/>
        </RelativeLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/deaths"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/total_death_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textAllCaps="true"
                    tools:text="777553"
                    android:text="@{``+ global.totalDeaths}"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textAllCaps="true"
                    android:layout_toEndOf="@id/total_death_cases"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:textColor="#595959"
                    android:textSize="16sp"
                    tools:text="+2225"
                    android:text="@{`+`+ global.newDeaths}"/>
        </RelativeLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</layout>